# mappo

./: .dockerignore  .gitignore  Makefile  README.md  mappo.env.example  plans-next.md  plans.md  pom.xml  pulumi-platform.env.example  pulumi-runtime.env.example  pyproject.toml
backend/: Dockerfile  README.md  pom.xml  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/core/: settings.py
backend/app/db/: __init__.py  session.py
backend/app/domain/: __init__.py  admin.py  common.py  helpers.py  releases.py  runs.py  runtime.py  targets.py
backend/app/modules/: azure_runtime_helpers.py  control_plane.py  control_plane_domain_admin.py  control_plane_domain_releases.py  control_plane_domain_runs.py  control_plane_domain_targets.py  control_plane_helpers.py  control_plane_storage.py  control_plane_storage_releases.py  control_plane_storage_runs.py  control_plane_storage_targets.py  discovery.py  execution.py  execution_utils.py  schemas.py  template_spec_runtime.py
backend/app/repositories/: admin_repository.py  common.py  releases_repository.py  runs_repository.py  targets_repository.py
backend/flyway/: Dockerfile  flyway.conf
backend/openapi/: openapi.json
backend/scripts/: bootstrap_releases.py  demo_reset.py  ensure_db.sh  flyway.sh  gen_models.sh  generate_openapi.py  import_pulumi_targets.py  import_targets.py  prune_retention.py
backend/tests/: conftest.py  test_admin.py  test_api_versioning.py  test_execution_modes.py  test_runs.py  test_store_persistence.py  test_targets.py  test_tenant_resolution.py
(+1021 files in other folders)
